fix framework panels

--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+ML
+Copy
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -516,6 +519,7 @@
             display: flex;
             flex-wrap: wrap;
             gap: 8px;
+            align-content: flex-start;
         }
 
         .tech-tag {
@@ -527,6 +531,7 @@
             border-radius: 6px;
             color: var(--text-secondary);
             transition: all var(--transition-fast);
+            height: fit-content;
         }
 
         .tech-tag:hover {
